updating to rev 3000